Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137823

Tab order does not follow visual order

XMLWordPrintable

    • Android, iOS/tvOS/watchOS, macOS, Windows
    • ad17c15c1 (dev), 191af18be (6.10), 1fc43a371 (6.9), df2c40297 (dev), 33ba342e5 (6.10), 6afdf0e00 (6.9), bfe8169b0 (dev), f5cc66bbb (6.10), 71e965f8b (6.9)

      When navigating a simple QML ApplicationWindow with tab/backtab the focus order differs from the visual order.

      The order is menuBar > header > footer > contentItem whereas the visual order is menuBar > header > contentItem > footer.

      This behavior seems confusing. Is it by design?

      When using a screen reader the order seems correct with the exception of iOS (QTBUG-131404).

      import QtQuick
      import QtQuick.Controls
      
      ApplicationWindow {
      	id: root
      
      	flags: Qt.Window
      	visible: true
      
      	footer: FocusableText {
      		text: "This is the footer"
      	}
      	header: FocusableText {
      		text: "This is the header"
      	}
      	menuBar: FocusableText {
      		text: "This is the menuBar"
      	}
      
      	FocusableText {
      		text: "This is the actual content"
      	}
      
      	component FocusableText: Text {
      		activeFocusOnTab: true
      		font.bold: activeFocus
      	}
      }
      
      

        1. Item Order.png
          100 kB
          Jan Möller
        For Gerrit Dashboard: QTBUG-137823
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            janmoeller Jan Möller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: