Change order of menuBar/header/footer to match visual order

Currently, the tab navigation order is confusing as the footer is
focused before the actual content of the ApplicationWindow. By adjusting
the stack order, the tab navigation now matches the visual order.

Fixes: QTBUG-137823
Pick-to: 6.8
Change-Id: Ibe6fe9305181fe7ed42d7f8ca2da689b1b6ccf41
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit df2c4029796dbbbee1ce04afb679c6a38fd15c3e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 33ba342e582b29072eb63367aae3923763b994e2)